--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
-    "mongodb": "^6.3.0",
-    "socket.io": "^4.7.4"
+    "mongodb": "^6.3.0"
   }
 }
